new implement swin transformer experiment

--- a/requirements.txt
+++ b/requirements.txt
@@ -39,6 +39,7 @@ nvidia-nvtx-cu12==12.4.127
 packaging==24.2
 pandas==2.2.3
 peft==0.14.0
+Pillow>=10.0.0
 propcache==0.2.1
 psutil==6.1.1
 pyarrow==19.0.0
@@ -51,7 +52,7 @@ requests==2.32.3
 rich==13.9.4
 safetensors==0.5.2
 scikit-learn==1.6.1
-scipy==1.15.1
+scipy>=1.7.0
 six==1.17.0
 sympy==1.13.1
 threadpoolctl==3.5.0
